converted to testng and running xml from maven