@@ -15,6 +15,69 @@
     <maven.compiler.source>1.8</maven.compiler.source>
  	<maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+  
+  
+  <build>
+  <sourceDirectory>src</sourceDirectory>
+<plugins>
+
+<!-- 
+	<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.7.0</version>
+    <configuration>
+        <release>8</release>
+        <verbose>true</verbose>
+    </configuration>
+</plugin> -->
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.5.1</version>
+    <configuration>
+        <source>1.8</source>
+        <target>1.8</target>
+    </configuration>
+</plugin>
+				<!--  <plugin>
+				    <groupId>org.apache.maven.plugins</groupId>
+				    <artifactId>maven-surefire-plugin</artifactId>
+				    <version>2.20.1</version>
+				    <configuration>
+				        <useSystemClassLoader>false</useSystemClassLoader>
+				    </configuration>
+				</plugin>  -->
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.22.1</version>
+    <configuration>
+    <suiteXmlFiles>
+   	             <suiteXmlFile>testng.xml</suiteXmlFile>
+     </suiteXmlFiles>
+  	   <forkCount>0</forkCount>
+        <testFailureIgnore>true</testFailureIgnore>
+  		<useSystemClassLoader>false</useSystemClassLoader>
+  		            <systemPropertyVariables>
+                <java.awt.headless>true</java.awt.headless>
+            </systemPropertyVariables>
+    </configuration>
+</plugin>
+				
+				<!-- <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.21.0</version>
+    <configuration>
+        <forkCount>0</forkCount>
+        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+    </configuration>
+</plugin> -->
+</plugins>
+</build>
+  
+  
 
   <dependencies>
     <dependency>
